--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,4 @@
-name: backend-github-actions
-on: [push]
+name: continous-integration
 jobs:
-  CI_Steps:
-    runs_on: ubuntu-latest
-    steps:
-      - name: code checkout
-        uses: actions/checkout@v4
-      - run: echo ok
-        name: Code Build
-      - run: echo ok
-        name: Code Test
-      - run: echo ok
-        name: Code Review
-      - run: echo ok
-        name: Release Software
-
-
-
+  call-continuous-integration-reusable:
+    uses: s-devops-i2/github-reusable-workflows/.github/workflows/ci.yml@main
