Adding CI steps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,3 +3,5 @@ on: [push]
 jobs:
   call-continuous-integration-reusable:
     uses: s-devops-i2/github-reusable-workflows/.github/workflows/ci.yml@main
+    with:
+      project_name: expense-backend
