Adding sonarqube and associated steps to github ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,3 +5,4 @@ jobs:
     uses: s-devops-i2/github-reusable-workflows/.github/workflows/ci.yml@main
     with:
       project_name: expense-backend
+    secrets: inherit
